fix styling/spacing issues, add link to submit quotes, cleanup repo file-structure (move icons), update manifest.json. Merry Christmas!

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ body {
   text-transform: uppercase;
   text-shadow: 0px 0px 4px #000, -2px -2px #000, 2px 2px #000;
   line-height: 1.4;
-  top: 50%;
+  top: 45%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -47,7 +47,7 @@ body {
   position: absolute;
   left: 50%;
   text-align: center;
-  bottom: 20%;
+  bottom: 17%;
   letter-spacing: .55rem;
   min-width: 18.75rem;
   max-width: 50%;
@@ -71,7 +71,7 @@ body {
   position: absolute;
   left: 50%;
   text-align: center;
-  bottom: 10%;
+  bottom: 1%;
   max-width: 50%;
   color: white;
   -webkit-transform: translateX(-50%);
@@ -82,7 +82,8 @@ body {
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000;
-  cursor: url(../img/heart.png),auto;
+  cursor: url(../img/hands.png),auto;
+  margin-top: auto;
 }
 
 #f-link {
@@ -98,6 +99,23 @@ body {
     -1px 1px 0 #000,
     1px 1px 0 #000;
   cursor: url(../img/heart.png),auto;
+  margin-top: auto;
+}
+
+#f-sub {
+  text-align: center;
+  bottom: 10%;
+  color: white;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+  cursor: url(../img/key.png),auto;
+  margin-top: auto;
 }
 
 #anotha-one:hover {
